--- a/smash.ipynb
+++ b/smash.ipynb
@@ -35,10 +35,70 @@
     "DATADIR = \"data/keras\"\n",
     "BATCH_SIZE = 16\n",
     "BIG_BATCH_SIZE = 32\n",
-    "LEARNING_RATE = 0.01\n",
+    "LEARNING_RATE = 0.0001\n",
     "\n",
     "IMAGE_ROW_SIZE = 584\n",
     "IMAGE_COLUMN_SIZE = 480"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're gonna need these callbacks and functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "\n",
+    "CHAR_NAMES = os.listdir(os.path.join(DATADIR, \"train\", \"images\"))\n",
+    "NUM_CHARACTERS = len(CHAR_NAMES)\n",
+    "\n",
+    "stop_on_val_loss = EarlyStopping(monitor='val_loss', min_delta=0.005, \n",
+    "                                 patience=3, verbose=0, mode='auto')\n",
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, \n",
+    "                              patience=2, min_lr=0.00001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(matrix, classes,\n",
+    "                          normalize=False,\n",
+    "                          title='Confusion matrix',\n",
+    "                          cmap=plt.cm.Blues):\n",
+    "    \"\"\"\n",
+    "    This function prints and plots the confusion matrix.\n",
+    "    Normalization can be applied by setting `normalize=True`.\n",
+    "    \"\"\"\n",
+    "    if normalize:\n",
+    "        matrix = matrix.astype('float') / matrix.sum(axis=1)[:, np.newaxis]\n",
+    "\n",
+    "    plt.imshow(matrix, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_marks = np.arange(len(classes))\n",
+    "    plt.xticks(tick_marks, classes, rotation=45)\n",
+    "    plt.yticks(tick_marks, classes)\n",
+    "\n",
+    "    fmt = '.2f' if normalize else 'd'\n",
+    "    thresh = matrix.max() / 2.\n",
+    "    for i, j in itertools.product(range(matrix.shape[0]), range(matrix.shape[1])):\n",
+    "        plt.text(j, i, format(matrix[i, j], fmt),\n",
+    "                 horizontalalignment=\"center\",\n",
+    "                 color=\"white\" if matrix[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label')"
    ]
   },
   {
@@ -57,7 +117,6 @@
     "                                  \"height_shift_range\": 0.05,\n",
     "                                  \"zoom_range\": 0.1,\n",
     "                                  \"horizontal_flip\": True,\n",
-    "                                  \"rescale\": 1.0 / 255,\n",
     "                                  \"preprocessing_function\": preprocess_input},\n",
     "                   data_flow_args={\"seed\": 1,\n",
     "                                   \"batch_size\": BATCH_SIZE}):\n",
@@ -337,66 +396,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We're gonna need these callbacks and functions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
-    "\n",
-    "CHAR_NAMES = os.listdir(os.path.join(DATADIR, \"train\", \"images\"))\n",
-    "NUM_CHARACTERS = len(CHAR_NAMES)\n",
-    "\n",
-    "stop_on_val_loss = EarlyStopping(monitor='val_loss', min_delta=0.005, \n",
-    "                                 patience=3, verbose=0, mode='auto')\n",
-    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, \n",
-    "                              patience=2, min_lr=0.00001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_confusion_matrix(matrix, classes,\n",
-    "                          normalize=False,\n",
-    "                          title='Confusion matrix',\n",
-    "                          cmap=plt.cm.Blues):\n",
-    "    \"\"\"\n",
-    "    This function prints and plots the confusion matrix.\n",
-    "    Normalization can be applied by setting `normalize=True`.\n",
-    "    \"\"\"\n",
-    "    if normalize:\n",
-    "        matrix = matrix.astype('float') / matrix.sum(axis=1)[:, np.newaxis]\n",
-    "\n",
-    "    plt.imshow(matrix, interpolation='nearest', cmap=cmap)\n",
-    "    plt.title(title)\n",
-    "    plt.colorbar()\n",
-    "    tick_marks = np.arange(len(classes))\n",
-    "    plt.xticks(tick_marks, classes, rotation=45)\n",
-    "    plt.yticks(tick_marks, classes)\n",
-    "\n",
-    "    fmt = '.2f' if normalize else 'd'\n",
-    "    thresh = matrix.max() / 2.\n",
-    "    for i, j in itertools.product(range(matrix.shape[0]), range(matrix.shape[1])):\n",
-    "        plt.text(j, i, format(matrix[i, j], fmt),\n",
-    "                 horizontalalignment=\"center\",\n",
-    "                 color=\"white\" if matrix[i, j] > thresh else \"black\")\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "    plt.ylabel('True label')\n",
-    "    plt.xlabel('Predicted label')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -476,6 +475,98 @@
    "metadata": {},
    "source": [
     "To test the model we'll need to slap it together with VGG16.  I'll do that tomorrow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train a Huge Neural Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So it seems I just can't get good results trying to save features and train a small network.  Maybe that bodes very poorly for my project.  But let's try training a giant network on the expensive amazon machines and just hope."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.applications.vgg16 import VGG16\n",
+    "from keras.layers import Dense, Flatten\n",
+    "from keras.models import Model\n",
+    "from keras.optimizers import Adam\n",
+    "\n",
+    "def init_model(target_num=NUM_CHARACTERS, learning_rate=LEARNING_RATE, \n",
+    "               hidden_width=128, hidden_depth=1):\n",
+    "    input_shape = (IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE, 3)\n",
+    "\n",
+    "    # Fine-tune prediction layer\n",
+    "    pretrained_model = VGG16(include_top=False, weights='imagenet',\n",
+    "                             input_shape=input_shape)\n",
+    "    for layer in pretrained_model.layers:\n",
+    "        layer.trainable = False\n",
+    "\n",
+    "    output_tensor = pretrained_model.output\n",
+    "    output_tensor = Flatten()(output_tensor)\n",
+    "    for _ in range(hidden_depth):\n",
+    "        output_tensor = Dense(hidden_width, activation='relu', \n",
+    "                              kernel_initializer='lecun_uniform')(output_tensor)\n",
+    "    output_tensor = Dense(target_num, activation=\"softmax\", \n",
+    "                          name=\"predictions\")(output_tensor)\n",
+    "\n",
+    "    # Define and compile the model\n",
+    "    model = Model(inputs=pretrained_model.input, outputs=output_tensor)\n",
+    "    model.compile(optimizer=Adam(lr=learning_rate),\n",
+    "                  loss=\"categorical_crossentropy\",\n",
+    "                  metrics=[\"accuracy\"])\n",
+    "\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = init_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_history = model.fit_generator(generator=make_generator(\"train\"),\n",
+    "                                       steps_per_epoch=steps_per_epoch(\"train\"),\n",
+    "                                       epochs=50,\n",
+    "                                       validation_data=make_generator(\"valid\"),\n",
+    "                                       validation_steps=steps_per_epoch(\"valid\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(os.path.join(DATADIR, datetime.datetime.today().strftime('%Y-%m-%d-%H-%M') + \"-full-model-all-data.h5\"))"
    ]
   }
  ],
