--- a/smash.ipynb
+++ b/smash.ipynb
@@ -34,7 +34,6 @@
     "\n",
     "DATADIR = \"data/keras\"\n",
     "BATCH_SIZE = 16\n",
-    "BIG_BATCH_SIZE = 32\n",
     "LEARNING_RATE = 0.0001\n",
     "\n",
     "IMAGE_ROW_SIZE = 584\n",
@@ -158,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just fyi, in the following we're only dealing with about 30% of all the images.  That's to ensure we can fit all the cached features in memory.  We generated these lists with `make keras KERAS_TRAIN_PCT=20 KERAS_TEST_PCT=5 KERAS_VALID_PCT=5`"
+    "Just fyi, in the following we're only dealing with about 30% of all the images.  That's to ensure we can fit all the cached features in memory.  We generated these lists with `make keras KERAS_TRAIN_PCT=30 KERAS_TEST_PCT=10 KERAS_VALID_PCT=10`"
    ]
   },
   {
@@ -183,6 +182,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We're running this on the big p2.8xlarge instance with 8 GPUs, so let's up the batch size and learning rate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 32\n",
+    "LEARNING_RATE = 0.01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To pull out all the images for feeding through VGG16 we use `class_mode=None` and `shuffled=False`."
    ]
   },
@@ -193,18 +209,18 @@
    "outputs": [],
    "source": [
     "image_count_train = count_images(\"train\")\n",
-    "image_count_train_generator_cutoff = image_count_train / BIG_BATCH_SIZE + 1\n",
+    "image_count_train_generator_cutoff = image_count_train / BATCH_SIZE + 1\n",
     "\n",
     "generator_train = make_generator(\n",
     "    \"train\",\n",
     "    data_gen_args={\"preprocessing_function\": preprocess_input},\n",
-    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
+    "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
     "                    \"class_mode\": None,\n",
     "                    \"shuffle\": False})\n",
     "generator_train_labels = make_generator(\n",
     "    \"train\",\n",
     "    data_gen_args={},\n",
-    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
+    "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
     "                    \"shuffle\": False})"
    ]
   },
@@ -245,25 +261,9 @@
    "outputs": [],
    "source": [
     "bottleneck_features_train = model.predict_generator(generator_train,\n",
-    "                                                    image_count_train_cutoff)\n",
+    "                                                    steps=image_count_train_generator_cutoff,\n",
+    "                                                    workers=8)\n",
     "bottleneck_features_train = bottleneck_features_train[:image_count_train]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And now we save the results."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_features_train'), bottleneck_features_train)\n",
-    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_feature_labels_train'), labels_train)"
    ]
   },
   {
@@ -282,18 +282,18 @@
    "outputs": [],
    "source": [
     "image_count_valid = count_images(\"valid\")\n",
-    "image_count_valid_generator_cutoff = image_count_valid / BIG_BATCH_SIZE + 1\n",
+    "image_count_valid_generator_cutoff = image_count_valid / BATCH_SIZE + 1\n",
     "\n",
     "generator_valid = make_generator(\n",
     "    \"valid\",\n",
     "    data_gen_args={\"preprocessing_function\": preprocess_input},\n",
-    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
+    "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
     "                    \"class_mode\": None,\n",
     "                    \"shuffle\": False})\n",
     "generator_valid_labels = make_generator(\n",
     "    \"valid\",\n",
     "    data_gen_args={},\n",
-    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
+    "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
     "                    \"shuffle\": False})\n",
     "\n",
     "labels_valid = []\n",
@@ -305,11 +305,9 @@
     "labels_valid = np.array(labels_valid[:image_count_valid])\n",
     "\n",
     "bottleneck_features_valid = model.predict_generator(generator_valid,\n",
-    "                                                    image_count_valid_generator_cutoff)\n",
-    "bottleneck_features_valid = bottleneck_features_valid[:image_count_valid]\n",
-    "\n",
-    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_features_valid'), bottleneck_features_valid)\n",
-    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_feature_labels_valid'), labels_valid)"
+    "                                                    steps=image_count_valid_generator_cutoff,\n",
+    "                                                    workers=8)\n",
+    "bottleneck_features_valid = bottleneck_features_valid[:image_count_valid]"
    ]
   },
   {
@@ -326,18 +324,18 @@
    "outputs": [],
    "source": [
     "image_count_test = count_images(\"test\")\n",
-    "image_count_test_generator_cutoff = image_count_test / BIG_BATCH_SIZE + 1\n",
+    "image_count_test_generator_cutoff = image_count_test / BATCH_SIZE + 1\n",
     "\n",
     "generator_test = make_generator(\n",
     "    \"test\",\n",
     "    data_gen_args={\"preprocessing_function\": preprocess_input},\n",
-    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
+    "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
     "                    \"class_mode\": None,\n",
     "                    \"shuffle\": False})\n",
     "generator_test_labels = make_generator(\n",
     "    \"test\",\n",
     "    data_gen_args={},\n",
-    "    data_flow_args={\"batch_size\": BIG_BATCH_SIZE,\n",
+    "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
     "                    \"shuffle\": False})\n",
     "\n",
     "labels_test = []\n",
@@ -349,11 +347,9 @@
     "labels_test = np.array(labels_test[:image_count_test])\n",
     "\n",
     "bottleneck_features_test = model.predict_generator(generator_test,\n",
-    "                                                   image_count_test_generator_cutoff)\n",
-    "bottleneck_features_test = bottleneck_features_test[:image_count_test]\n",
-    "\n",
-    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_features_test'), bottleneck_features_test)\n",
-    "np.savez_compressed(os.path.join(DATADIR, 'bottleneck_feature_labels_test'), labels_test)"
+    "                                                   steps=image_count_test_generator_cutoff,\n",
+    "                                                   workers=8)\n",
+    "bottleneck_features_test = bottleneck_features_test[:image_count_test]"
    ]
   },
   {
@@ -367,6 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Load up our features and labels."
    ]
   },
@@ -376,23 +373,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = np.load(os.path.join(DATADIR, 'bottleneck_features_train.npz'))\n",
-    "train_data = train_data['arr_0']\n",
+    "train_data = bottleneck_features_train\n",
+    "train_labels = labels_train\n",
     "\n",
-    "train_labels = np.load(os.path.join(DATADIR, 'bottleneck_feature_labels_train.npz'))\n",
-    "train_labels = train_labels['arr_0']\n",
+    "valid_data = bottleneck_features_valid\n",
+    "valid_labels = labels_valid\n",
     "\n",
-    "valid_data = np.load(os.path.join(DATADIR, 'bottleneck_features_valid.npz'))\n",
-    "valid_data = valid_data['arr_0']\n",
-    "\n",
-    "valid_labels = np.load(os.path.join(DATADIR, 'bottleneck_feature_labels_valid.npz'))\n",
-    "valid_labels = valid_labels['arr_0']\n",
-    "\n",
-    "test_data = np.load(os.path.join(DATADIR, 'bottleneck_features_test.npz'))\n",
-    "test_data = test_data['arr_0']\n",
-    "\n",
-    "test_labels = np.load(os.path.join(DATADIR, 'bottleneck_feature_labels_test.npz'))\n",
-    "test_labels = test_labels['arr_0']"
+    "test_data = bottleneck_features_test\n",
+    "test_labels = labels_test"
    ]
   },
   {
@@ -503,7 +491,7 @@
     "from keras.optimizers import Adam\n",
     "\n",
     "def init_model(target_num=NUM_CHARACTERS, learning_rate=LEARNING_RATE, \n",
-    "               hidden_width=128, hidden_depth=1):\n",
+    "               hidden_width=128, hidden_depth=1, dropout_rate=0.2):\n",
     "    input_shape = (IMAGE_ROW_SIZE, IMAGE_COLUMN_SIZE, 3)\n",
     "\n",
     "    # Fine-tune prediction layer\n",
@@ -517,7 +505,7 @@
     "    for _ in range(hidden_depth):\n",
     "        output_tensor = Dense(hidden_width, activation='relu', \n",
     "                              kernel_initializer='lecun_uniform')(output_tensor)\n",
-    "        output_tensor = Dropout(0.2)(output_tensor)\n",
+    "        output_tensor = Dropout(dropout_rate)(output_tensor)\n",
     "    output_tensor = Dense(target_num, activation=\"softmax\", \n",
     "                          name=\"predictions\")(output_tensor)\n",
     "\n",
@@ -536,7 +524,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = init_model()"
+    "model = init_model(hidden_width=256, hidden_depth=2, dropout_rate=0.2)"
    ]
   },
   {
@@ -561,7 +549,7 @@
     "                                       epochs=50,\n",
     "                                       validation_data=make_generator(\"valid\"),\n",
     "                                       validation_steps=steps_per_epoch(\"valid\"),\n",
-    "                                       callbacks=[stop_on_val_loss, reduce_lr])"
+    "                                       callbacks=[stop_on_val_loss])"
    ]
   },
   {
