--- a/smash.ipynb
+++ b/smash.ipynb
@@ -175,7 +175,7 @@
    "source": [
     "from keras.applications.vgg16 import VGG16\n",
     "\n",
-    "model = VGG16(include_top=False, weights=\"imagenet\")"
+    "vgg_model = VGG16(include_top=False, weights=\"imagenet\")"
    ]
   },
   {
@@ -237,14 +237,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_train = []\n",
+    "train_labels = []\n",
     "\n",
     "for i, (_, labels) in enumerate(generator_train_labels):\n",
     "    if i >= image_count_train_generator_cutoff:\n",
     "        break\n",
     "    else:\n",
-    "        labels_train.extend(labels)\n",
-    "labels_train = np.array(labels_train[:image_count_train])"
+    "        train_labels.extend(labels)\n",
+    "train_labels = np.array(train_labels[:image_count_train])"
    ]
   },
   {
@@ -260,10 +260,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bottleneck_features_train = model.predict_generator(generator_train,\n",
-    "                                                    steps=image_count_train_generator_cutoff,\n",
-    "                                                    workers=8)\n",
-    "bottleneck_features_train = bottleneck_features_train[:image_count_train]"
+    "train_data = vgg_model.predict_generator(generator_train,\n",
+    "                                         steps=image_count_train_generator_cutoff,\n",
+    "                                         workers=8)\n",
+    "train_data = train_data[:image_count_train]"
    ]
   },
   {
@@ -296,18 +296,18 @@
     "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
     "                    \"shuffle\": False})\n",
     "\n",
-    "labels_valid = []\n",
+    "valid_labels = []\n",
     "for i, (_, labels) in enumerate(generator_valid_labels):\n",
     "    if i >= image_count_valid_generator_cutoff:\n",
     "        break\n",
     "    else:\n",
-    "        labels_valid.extend(labels)\n",
-    "labels_valid = np.array(labels_valid[:image_count_valid])\n",
+    "        valid_labels.extend(labels)\n",
+    "valid_labels = np.array(valid_labels[:image_count_valid])\n",
     "\n",
-    "bottleneck_features_valid = model.predict_generator(generator_valid,\n",
-    "                                                    steps=image_count_valid_generator_cutoff,\n",
-    "                                                    workers=8)\n",
-    "bottleneck_features_valid = bottleneck_features_valid[:image_count_valid]"
+    "valid_data = vgg_model.predict_generator(generator_valid,\n",
+    "                                         steps=image_count_valid_generator_cutoff,\n",
+    "                                         workers=8)\n",
+    "valid_data = valid_data[:image_count_valid]"
    ]
   },
   {
@@ -338,18 +338,18 @@
     "    data_flow_args={\"batch_size\": BATCH_SIZE,\n",
     "                    \"shuffle\": False})\n",
     "\n",
-    "labels_test = []\n",
+    "test_labels = []\n",
     "for i, (_, labels) in enumerate(generator_test_labels):\n",
     "    if i >= image_count_test_generator_cutoff:\n",
     "        break\n",
     "    else:\n",
-    "        labels_test.extend(labels)\n",
-    "labels_test = np.array(labels_test[:image_count_test])\n",
+    "        test_labels.extend(labels)\n",
+    "test_labels = np.array(test_labels[:image_count_test])\n",
     "\n",
-    "bottleneck_features_test = model.predict_generator(generator_test,\n",
-    "                                                   steps=image_count_test_generator_cutoff,\n",
-    "                                                   workers=8)\n",
-    "bottleneck_features_test = bottleneck_features_test[:image_count_test]"
+    "test_data = vgg_model.predict_generator(generator_test,\n",
+    "                                        steps=image_count_test_generator_cutoff,\n",
+    "                                        workers=8)\n",
+    "test_data = test_data[:image_count_test]"
    ]
   },
   {
@@ -363,8 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Load up our features and labels."
+    "Randomize the data."
    ]
   },
   {
@@ -373,14 +372,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = bottleneck_features_train\n",
-    "train_labels = labels_train\n",
+    "train_randomizer = np.arange(train_data.shape[0])\n",
+    "np.random.shuffle(train_randomizer)\n",
     "\n",
-    "valid_data = bottleneck_features_valid\n",
-    "valid_labels = labels_valid\n",
+    "valid_randomizer = np.arange(valid_data.shape[0])\n",
+    "np.random.shuffle(valid_randomizer)\n",
     "\n",
-    "test_data = bottleneck_features_test\n",
-    "test_labels = labels_test"
+    "test_randomizer = np.arange(test_data.shape[0])\n",
+    "np.random.shuffle(test_randomizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_r = train_data[train_randomizer]\n",
+    "train_labels_r = train_labels[train_randomizer]\n",
+    "\n",
+    "valid_data_r = valid_data[valid_randomizer]\n",
+    "valid_labels_r = valid_labels[valid_randomizer]\n",
+    "\n",
+    "test_data_r = test_data[test_randomizer]\n",
+    "test_labels_r = test_labels[test_randomizer]"
    ]
   },
   {
@@ -410,13 +425,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And, finally, start training our model."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -442,10 +450,10 @@
    },
    "outputs": [],
    "source": [
-    "training_history = model.fit(train_data, train_labels,\n",
-    "                             epochs=50,\n",
+    "training_history = model.fit(train_data_r, train_labels_r,\n",
+    "                             epochs=5,\n",
     "                             batch_size=BATCH_SIZE,\n",
-    "                             validation_data=(valid_data, valid_labels),\n",
+    "                             validation_data=(valid_data_r, valid_labels_r),\n",
     "                             callbacks=[stop_on_val_loss, reduce_lr])"
    ]
   },
@@ -570,18 +578,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
   }
  },
  "nbformat": 4,
