--- a/smash.ipynb
+++ b/smash.ipynb
@@ -1236,6 +1236,23 @@
   "metadata": {
     "git": {
       "suppress_outputs": true
+    },
+    "kernelspec": {
+      "display_name": "datasci-smash",
+      "language": "python",
+      "name": "datasci-smash"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.4"
     }
   },
   "nbformat": 4,
